log
Wed 24 Apr 2024 06:45:27 PM UTC: 
 tests:  0|6
total_score: 0/70
2f94628
Wed 24 Apr 2024 06:56:20 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
15f3655
Wed 24 Apr 2024 07:41:37 PM UTC: 
 hashmap.c | 38 ++++++++++++++++++++++++++++++++++++++
 1 file changed, 38 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:85:5: error: implicit declaration of function ‘insert’; did you mean ‘insertMap’? [-Werror=implicit-function-declaration]
   85 |     insert(map, oldArray->key, oldArray->data);
      |     ^~~~~~
      |     insertMap
hashmap.c:85:25: error: ‘*oldArray’ is a pointer; did you mean to use ‘->’?
   85 |     insert(map, oldArray->key, oldArray->data);
      |                         ^~
      |                         ->
hashmap.c:85:40: error: ‘*oldArray’ is a pointer; did you mean to use ‘->’?
   85 |     insert(map, oldArray->key, oldArray->data);
      |                                        ^~
      |                                        ->
hashmap.c:81:11: error: unused variable ‘newArray’ [-Werror=unused-variable]
   81 |   Pair ** newArray = (Pair**) malloc(nuevaCap* sizeof(Pair*));
      |           ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
103daa0
Wed 24 Apr 2024 07:42:03 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/cc9EuYhU.o: in function `enlarge_test':
test.c:(.text+0x11f0): undefined reference to `enlarge'
collect2: error: ld returned 1 exit status
Compilation failed
ec0e730
Wed 24 Apr 2024 07:42:24 PM UTC: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
2a3578e
Wed 24 Apr 2024 07:46:59 PM UTC: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 30/70
676dba0
Wed 24 Apr 2024 07:49:43 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:86:49: error: ‘Pair’ has no member named ‘data’
   86 |     insertMap(map, oldArray[i]->key, oldArray[i]->data);
      |                                                 ^~
hashmap.c:82:11: error: unused variable ‘newArray’ [-Werror=unused-variable]
   82 |   Pair ** newArray = (Pair**) malloc(nuevaCap* sizeof(Pair*));
      |           ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7193d3e
Wed 24 Apr 2024 07:59:43 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:82:11: error: unused variable ‘newArray’ [-Werror=unused-variable]
   82 |   Pair ** newArray = (Pair**) malloc(nuevaCap* sizeof(Pair*));
      |           ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f1d1364
Wed 24 Apr 2024 08:01:58 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:83:11: error: unused variable ‘newArray’ [-Werror=unused-variable]
   83 |   Pair ** newArray = (Pair**) malloc(nuevaCap* sizeof(Pair*));
      |           ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
803559f
Wed 24 Apr 2024 08:04:27 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
dbe6382
Thu 25 Apr 2024 01:32:18 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:88:9: error: unused variable ‘currentPair’ [-Werror=unused-variable]
   88 |   Pair *currentPair = oldArray[i];
      |         ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7c33b4d
Thu 25 Apr 2024 01:35:52 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4f98076
Thu 25 Apr 2024 01:37:25 AM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:85:11: error: unused variable ‘newArray’ [-Werror=unused-variable]
   85 |   Pair ** newArray = (Pair**) malloc(nuevaCap* sizeof(Pair*));
      |           ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
47e87da
Thu 25 Apr 2024 01:37:54 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
1bb3a9f
Thu 25 Apr 2024 04:08:03 AM UTC: 
 hashmap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  0|0
06e7731
Thu 25 Apr 2024 04:08:27 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
372a10b
Thu 25 Apr 2024 04:11:11 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
5040910
Thu 25 Apr 2024 04:14:26 AM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
885aeda
Thu 25 Apr 2024 04:15:24 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
c04a1ac
Thu 25 Apr 2024 04:16:37 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|3
total_score: 40/70
6f449fb
Thu 25 Apr 2024 04:16:56 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
c9d66b5
Thu 25 Apr 2024 04:24:09 AM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  7|3
total_score: 40/70
97d2e4c
Thu 25 Apr 2024 04:27:15 AM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  7|3
total_score: 40/70
f096146
Thu 25 Apr 2024 04:31:03 AM UTC: 
 hashmap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  7|3
total_score: 40/70
40f086d
Thu 25 Apr 2024 04:35:38 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
f15d824
Thu 25 Apr 2024 04:36:15 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|3
total_score: 40/70
8772569
Thu 25 Apr 2024 04:38:00 AM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
351a42e
Thu 25 Apr 2024 04:39:43 AM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
458e217
Thu 25 Apr 2024 04:47:40 AM UTC: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  13|2
total_score: 50/70
086ed8b
Thu 25 Apr 2024 04:54:59 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
950744f
Thu 25 Apr 2024 05:00:13 AM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
01c14f8
Thu 25 Apr 2024 05:00:39 AM UTC: 
 hashmap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  13|2
total_score: 50/70
7764238
Thu 25 Apr 2024 02:32:56 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
8f0e0a7
Thu 25 Apr 2024 02:35:45 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
81fa837
Thu 25 Apr 2024 02:36:06 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
c935336
